--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,14 @@
 # Python bytecode / caches
 __pycache__/
 *.py[cod]
+
+# Virtual environments
+.venv/
+venv/
+ENV/
+
+# Pytest cache
+.pytest_cache/
+
+# Logs
+*.log
